[fix] framed multipleView alignment

--- a/packages/ng/libraries/core/src/style/definitions/select/_select-input.scss
+++ b/packages/ng/libraries/core/src/style/definitions/select/_select-input.scss
@@ -125,6 +125,10 @@
 					right: calc(4.8 * #{_component('textfield.input.padding-horizontal')});
 				}
 			}
+
+			&.mod-multiple.mod-multipleView.is-filled .lu-select-value {
+				margin-bottom: -.3rem;
+			}
 		}
 	}
 
